--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oem-palm-sugar-syrup-business-analysis",
+  "name": "oem-palm-sugar-syrup-business-analysis---16-sep-2025",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,9 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "chart.js": "^4.5.0",
-    "react-chartjs-2": "^5.3.0"
+    "vega": "^5.29.0",
+    "vega-lite": "^5.19.0",
+    "vega-embed": "^6.25.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
